css: fixed a link to picture used in landing page header

--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ main h1 {
 }
 
 .hp2  {
-    background-image: url(./images/blogging.svg);
+    background-image: url(./images/blogging.png);
     background-repeat: no-repeat;
     background-position: center;
     width: 14.75rem;
